# sieve

./: .gitignore  Makefile  README.md  pyproject.toml
baselines/cartridges/: .gitignore  README.md  pyproject.toml
baselines/cartridges/cartridges/: __init__.py  cache.py  datasets.py  evaluate.py  generation.py  structs.py  synthesize.py  train.py
baselines/cartridges/cartridges/clients/: base.py  openai.py  together.py  tokasaurus.py  usage.py
baselines/cartridges/cartridges/data/: __init__.py  chunkers.py  resources.py  tools.py
baselines/cartridges/cartridges/initialization/: __init__.py  pretrained.py  random.py  text.py  tokenization_utils.py
baselines/cartridges/cartridges/models/: __init__.py  attention.py  config.py
baselines/cartridges/cartridges/synthesizers/: base.py  self_study.py  utils.py
baselines/cartridges/cartridges/tests/: README.md  __init__.py  mocks.py
baselines/cartridges/cartridges/utils/: __init__.py  cache_size.py  chat.py  hf.py  llm_messages.py  thinking.py  wandb.py
baselines/cartridges/docs/: training.md
baselines/cartridges/examples/: cartridge_chat.py
baselines/cartridges/examples/arxiv/: README.md  arxiv_baseline.py  arxiv_synthesize.py  arxiv_synthesize_eval.py  arxiv_train.py
baselines/cartridges/infra/: modal_deploy_sglang.py  modal_deploy_tokasaurus.py  modal_deploy_tokasaurus_flash.py  modal_deploy_vllm.py  modal_ssh.py
baselines/cartridges/infra/tuning/: tune_toka.py
baselines/cartridges/viz/: README.md  index.html  package-lock.json  package.json  requirements.txt  start.sh  vite.config.js
mtob/: eval.py  (+1 more)
(+131 files in other folders)
